# syn-doc-gen

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
dataset_generator/: datamodels.py  generator.py
docker/: dev.Dockerfile
scripts/: add_content_ids.py  gen_dataset.py
scripts/configs/: all_styles_config.yaml  eval_opts.py  style_config.yaml
source_data/: schema_template.json
source_data/example_document/: doc_content.json  gt_info.json
static/: example.html  markup.html
syntetic_pdf_generator/: PDFGenerator.py  PDFGeneratorHTMLCSS.py  PDFGeneratorHTMLCSSJS.py
